nesc-frontend/src/test/resources/integration/programs/good/good21/S.nc
interface S<T>
{
   command int c(T t);
   event void e(T t);
}
