nesc-frontend/src/test/resources/integration/programs/bad/bad19/I.nc
interface I<T @integer()>
{
   command void c(T t);
   event void e(T t);
}
